minor changes for better integration of the memo function

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     <ul class="nav">
       <li><a href="#">Home</a></li>
       <li><a href="#">My Communities</a></li>
-      <li><a href="#">Add Memo</a></li>
+      <li><a href="/memo">Add Memo</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
 </div>
