--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="styles/basic.css"> <!-- styles for the topnav,main area and chatbtn -->
 	<link rel="stylesheet" href="styles/dash.css"> <!-- for the left Navbar -->
 	<script type="text/javascript" src="scripts/cards.js"></script> <!-- Lazy load for the community cards -->
-	<script type="text/javascript" src="scripts/chat.js"></script> <!-- handling chat messages and animations -->
+	<script type="text/javascript" src="scripts/chat.js"></script> <!-- Chat engine and animations -->
 	<script src="/socket.io/socket.io.js"></script> <!-- Import Socket.io -->
 
 	<title>Hoodly Desktop</title>
